--- a/templates/partial/header.html
+++ b/templates/partial/header.html
@@ -6,7 +6,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col d-flex flex-row">
-						<div class="phone">+45 345 3324 56789</div>
+						<div class="phone">+996 772 17 79 87</div>
 						<div class="social">
 							<ul class="social_list">
 								<li class="social_list_item"><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
@@ -33,15 +33,12 @@
 				<div class="row">
 					<div class="col main_nav_col d-flex flex-row align-items-center justify-content-start">
 						<div class="logo_container">
-							<div class="logo"><a href="#"><img src="images/logo.png" alt="">travelix</a></div>
+							<div class="logo"><a href="#"><img src="{% static 'images/logo.png' %}" alt="">travelix</a></div>
 						</div>
 						<div class="main_nav_container ml-auto">
 							<ul class="main_nav_list">
-								<li class="main_nav_item"><a href="#">home</a></li>
-								<li class="main_nav_item"><a href="origi/about.html">about us</a></li>
-								<li class="main_nav_item"><a href="origi/offers.html">offers</a></li>
-								<li class="main_nav_item"><a href="origi/blog.html">news</a></li>
-								<li class="main_nav_item"><a href="origi/contact.html">contact</a></li>
+								<li class="main_nav_item"><a href="/">home</a></li>
+								<li class="main_nav_item"><a href="{% url 'offers' %}">offers</a></li>
 							</ul>
 						</div>
 						<div class="content_search ml-lg-0 ml-auto">
